- add basic setting to select mime types to be shown - as default show only phone contacts

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -295,4 +295,5 @@
     <string name="clipboard_warning_dialog">Dadurch wird der Inhalt der Zwischenablage überschrieben.</string>
     <string name="title_import_export">Import &amp; Export</string>
     <string name="theme_bar_color">Farbe der Favoritenleiste und Suchleiste</string>
+    <string name="contact_mime_types_title">Anzuzeigende Kontakte auswählen</string>
 </resources>
