--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -308,4 +308,5 @@
     <string name="import_settings">Import settings and tags</string>
     <string name="import_settings_dialog">This will overwrite your current settings and tags with clipboard content. Existing tags will be REMOVED. Are you sure?</string>
     <string name="theme_bar_color">Favorites bar and Search bar color</string>
+    <string name="contact_mime_types_title">Select contacts to be shown</string>
 </resources>
