--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,5 +330,6 @@
     <string name="shape_octagon">Octagon</string>
     <string name="shape_hexagon">Hexagon</string>
     <string name="excluded_apps_toggle">Show excluded apps in search</string>
+	<string name="contact_mime_types_title">Select contacts to be shown</string>
     <string name="always_default_web_search_on_enter">Always trigger default web search provider on enter</string>
 </resources>
